E - oppgrader constants med ny versjon av R&R. Kopier oppset fra dp-quiz-birgitte for å forenkle gradle bygg.